# zsolitaire-solvers

./: LICENSE  README.md
cribbage/: CMakeLists.txt  README.md  cribbage.cpp
cribbage/cribbage-rs/: .gitignore  Cargo.toml
cribbage/cribbage-rs/src/: lib.rs
